--- a/web/whiteboard-blueprint-xml/pom.xml
+++ b/web/whiteboard-blueprint-xml/pom.xml
@@ -66,7 +66,7 @@
                     <instructions>
                         <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
                         <Private-Package>org.ozoneplatform.examples.web.*</Private-Package>
-                        <Export-Package>!org.ozoneplatform.examples.web.*</Export-Package>
+                        <Export-Package>org.ozoneplatform.examples.*</Export-Package>
                         <!--<Meta-Persistence></Meta-Persistence>-->
                         <Import-Package>
                             *
